<resources>
    <string name="authority">com.arifian.udacity.inventoryapp</string>
    <string name="app_name">Inventory App</string>

    <string name="title_add_product">Add Product</string>
    <string name="title_edit_product">Edit Product</string>

    <string name="error_empty">No Product Found. \nPress "+" button at the right bottom corner of the screen to add product</string>
    <string name="edit_product_name">Name</string>
    <string name="edit_product_price">Price</string>
    <string name="edit_product_qty">Quantity (Optional)</string>
    <string name="edit_product_image">Image (Optional)</string>

    <string name="menu_done">Done</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_edit">Edit</string>
    <string name="detail_product_order"><u>Order More</u></string>
    <string name="detail_product_sale">SALE</string>
    <string name="detail_product_receive">RECEIVE</string>

    <string name="dialog_positive">OK</string>
    <string name="dialog_negative">Cancel</string>
    <string name="dialog_delete_title">Delete</string>
    <string name="dialog_discard_title">Discard</string>
    <string name="dialog_delete_message">Are you sure want to delete this product?</string>
    <string name="dialog_discard_message">Are you sure want to discard changes on this product?</string>

    <string name="order_more_message">Hello Sir. \nMay I order product named \"%1$s\" with price of %2$s? \nPlease reply as soon as possible because I only have %3$d left here.\nThankyou very much.</string>
    <string name="product_left">left</string>
    <string name="order_more_text">Order</string>
    <string name="default_qty_sale">1</string>
    <string name="deleted">Deleted</string>
    <string name="error_mail_client">Please install a mail client first.</string>
    <string name="dialog_error_title">Error</string>
</resources>
