<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/detail_app_bar_height"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/activity_margin">

            <TextView
                android:id="@+id/text_product_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/text_product_qty"
                android:textSize="@dimen/item_name_size"
                android:text="ProductNameHere"/>
            <TextView
                android:id="@+id/text_product_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text_product_name"
                android:layout_toLeftOf="@+id/text_product_qty"
                android:text="PriceHere"/>
            <TextView
                android:id="@+id/text_product_qty_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="qty"/>
            <TextView
                android:id="@+id/text_product_qty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text_product_qty_label"
                android:textSize="@dimen/item_qty_size"
                android:text="10"/>

            <TextView
                android:id="@+id/text_product_order"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_below="@+id/text_product_qty"
                android:textStyle=""
                android:text="@string/detail_product_order"/>


        </RelativeLayout>
    </android.support.v4.widget.NestedScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="horizontal">
        <LinearLayout
            android:id="@+id/button_product_sale"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:background="@drawable/btn_sale">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_vertical">
                <ImageButton
                    android:id="@+id/button_sale_decrease"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_increase_decrease"
                    android:src="@drawable/ic_remove_white_24dp"
                    android:onClick="decrease"/>
                <EditText
                    android:id="@+id/edit_sale_number"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:cursorVisible="false"
                    android:inputType="number"
                    android:text="1"/>
                <ImageButton
                    android:id="@+id/button_sale_increase"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_increase_decrease"
                    android:src="@drawable/ic_add_white_24dp"
                    android:onClick="increase"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_product_sale"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/button_product_receive"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/btn_receive"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center_vertical">
                <ImageButton
                    android:id="@+id/button_receive_decrease"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_increase_decrease"
                    android:src="@drawable/ic_remove_white_24dp"
                    android:onClick="decrease"/>
                <EditText
                    android:id="@+id/edit_receive_number"
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:background="@android:color/white"
                    android:gravity="center"
                    android:cursorVisible="false"
                    android:inputType="number"
                    android:text="1"/>
                <ImageButton
                    android:id="@+id/button_receive_increase"
                    android:layout_width="30dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/btn_increase_decrease"
                    android:src="@drawable/ic_add_white_24dp"
                    android:onClick="increase"/>
            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/detail_product_receive"/>
        </LinearLayout>

    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>
